Fixes h5 to h4 and reduce spacing between sections

--- a/css/style.css
+++ b/css/style.css
@@ -4396,7 +4396,7 @@ body.always-mobile .navigation-header.white-dropdown .navigation-bar li.dropdown
   vertical-align: middle;
 }
 .process-section {
-  padding: 20px 0 90px;
+  padding: 20px 0 1px;
 }
 .features-section {
   margin-bottom: 50px;
